# src/backend/GreatReports.Presentation/Requests/CreateGroupRequest.cs
@@ -1,0 +1,8 @@
+namespace GreatReports.Presentation.Requests;
+
+public record CreateGroupRequest(
+    Guid GroupLeaderId,
+    Guid ClientCompanyId,
+    Guid ProjectId,
+    string Name,
+    string Timezone);
